...
          readOnly = true,
          placeholder = { Text("Group Type", color = PlaceholderTextColor) },
          trailingIcon = {
            IconButton(onClick = { expanded = !expanded }) {
              Icon(
                  imageVector = Icons.Default.ArrowDropDown,
                  contentDescription = "Dropdown",
                  tint = IconColor)
            }
          },
          colors =
              OutlinedTextFieldDefaults.colors(
                  focusedBorderColor = FocusedBorderColor,
...
